--- a/assets/components/createquestion/questioncard.css
+++ b/assets/components/createquestion/questioncard.css
@@ -1,8 +1,7 @@
 /*---------- QUIZCARDS ---------*/
-.card {
+.card--question {
   margin: 20px;
   padding: 10px 20px 10px 20px;
-  position: relative;
   width: 90%;
   max-width: 800px;
   border-radius: 8px;
@@ -11,26 +10,18 @@
   flex-direction: column;
 }
 
-.card__hero {
-  margin-left: 40px;
+.form__question {
+  margin: 0 40px 0 40px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.card__question {
-  margin-left: 40px;
-}
-
-.btn {
-  width: 40%;
-  max-width: 400px;
-  background: white;
-  border: none;
-  border-radius: 8px;
-  padding: 10px 0 10px 0;
-  box-shadow: 0 0 10px 6px rgba(242, 242, 242, 0.8);
-  align-self: center;
-  cursor: pointer;
+.user__tags {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 5px;
 }
 
 .card__taglist {
@@ -46,8 +37,6 @@
   box-shadow: 0 0 10px 6px rgba(242, 242, 242, 0.8);
 }
 
-.uil-bookmark-card {
-  position: absolute;
-  top: -22px;
-  right: 40px;
+.btn--submit {
+  margin: 40px 0 20px 0;
 }
