--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,6 +2,7 @@
 @import "/assets/components/nav/nav.css";
 @import "/assets/components/userprofile/userprofile.css";
 @import "/assets/components/createquestion/questioncard.css";
+@import "/assets/styles/utility.css";
 
 * {
   box-sizing: border-box;
