--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,7 +2,6 @@
 @import "/assets/components/nav/nav.css";
 @import "/assets/components/userprofile/userprofile.css";
 @import "/assets/components/createquestion/questioncard.css";
-@import "/assets/styles/utility.css";
 
 * {
   box-sizing: border-box;
@@ -67,7 +66,31 @@ body {
   overflow: hidden;
 }
 
-.content {
+.main--site {
+  overflow-y: scroll;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main--bookmark {
+  overflow-y: scroll;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main--create {
+  overflow-y: scroll;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main--profile {
   overflow-y: scroll;
   padding: 20px;
   display: flex;
@@ -81,4 +104,13 @@ body {
   display: grid;
   align-items: center;
   background-color: hsl(236, 13%, 22%);
+}
+
+/*---------- UTILITIES ---------*/
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
 }
